管理端页面修改

--- a/代码类/WEB管理端前端/教务管理端/www/edu_admin.html
+++ b/代码类/WEB管理端前端/教务管理端/www/edu_admin.html
@@ -19,7 +19,8 @@
 </head>
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 学生管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
-
+<button class="btn btn-primary radius" type="submit">
+	<a style="color:#ffffff;" href="pmanager-ad.html">添加管理员</a></button>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort">
 			<thead>
@@ -27,8 +28,7 @@
 					<th width="25"><input type="checkbox" name="" value=""></th>
 					<th width="80">所属院校</th>
 					<th width="80">教工号</th>
-					<th width="80">教务管理员姓名</th>
-					<th width="80">登录密码</th>
+					<th width="80">教务管理员姓名</th> 
 					<th width="80">教务权限</th>
 					<th width="80">操作</th>
 				</tr>
@@ -39,9 +39,9 @@
 					<td>大学</td>
 					<td>10002</td>
 					<td>苏六</td>
-					<td>bf9f8d1f05dc08cc3b02e8fcf2c2ba57</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -52,9 +52,9 @@
 					<td>大学</td>
 					<td>10023</td>
 					<td>张四</td>
-					<td>e10adc3949ba59abbe56e057f20f883e</td>
 					<td>修改</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -65,9 +65,9 @@
 					<td>大学</td>
 					<td>10043</td>
 					<td>余玉</td>
-					<td>733d7be2196ff70efaf6913fc8bdcabf</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -78,9 +78,9 @@
 					<td>大学</td>
 					<td>10022</td>
 					<td>吴舞</td>
-					<td>71b3b26aaa319e0cdf6fdb8429c112b0</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -91,9 +91,9 @@
 					<td>大学</td>
 					<td>10302</td>
 					<td>易一</td>
-					<td>6c44e5cd17f0019c64b042e4a745412a</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -104,9 +104,9 @@
 					<td>大学</td>
 					<td>10052</td>
 					<td>戚七</td>
-					<td>e10adc3949ba59abbe56e057f20f883e</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -117,9 +117,9 @@
 					<td>大学</td>
 					<td>10202</td>
 					<td>师时</td>
-					<td>e10adc3949ba59abbe56e057f20f883e</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -130,9 +130,9 @@
 					<td>大学</td>
 					<td>10072</td>
 					<td>巴民</td>
-					<td>fb62579e990da4e2a8f15c3d1e123438</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -143,9 +143,9 @@
 					<td>大学</td>
 					<td>10012</td>
 					<td>司马思</td>
-					<td>a384b6463fc216a5f8ecb6670f86456a</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -156,9 +156,9 @@
 					<td>大学</td>
 					<td>10082</td>
 					<td>张名</td>
-					<td>e120ea280aa50693d5568d0071456460</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -169,9 +169,9 @@
 					<td>大学</td>
 					<td>10069</td>
 					<td>嬴银</td>
-					<td>b54b0cedbf6ac071636da3d095363049</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -182,9 +182,9 @@
 					<td>大学</td>
 					<td>10696</td>
 					<td>Alan</td>
-					<td>agdfgaagdsrrjfhh654sdfg98sfgsfg98</td>
 					<td>查看</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
