--- a/代码类/WEB管理端前端/教务管理端/www/grade.html
+++ b/代码类/WEB管理端前端/教务管理端/www/grade.html
@@ -51,7 +51,9 @@
 					<td>张三</td>
 					<td>大学物理入门</td>
 					<td>95</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -60,7 +62,8 @@
 					<td>张四</td>
 					<td>高等数学</td>
 					<td>95</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -69,7 +72,8 @@
 					<td>刘亿</td>
 					<td>大学物理入门</td>
 					<td>90</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -78,7 +82,8 @@
 					<td>马思</td>
 					<td>高等数学</td>
 					<td>85</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -87,7 +92,8 @@
 					<td>端木度</td>
 					<td>C语言程序设计</td>
 					<td>80</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -96,7 +102,8 @@
 					<td>林冲</td>
 					<td>C语言程序设计</td>
 					<td>80</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -105,7 +112,8 @@
 					<td>晁盖</td>
 					<td>大学物理入门</td>
 					<td>80</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -114,7 +122,8 @@
 					<td>马岱</td>
 					<td>大学物理入门</td>
 					<td>70</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -123,7 +132,8 @@
 					<td>诸葛瑾</td>
 					<td>大学物理入门</td>
 					<td>100</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -132,7 +142,8 @@
 					<td>诸葛均</td>
 					<td>大学物理入门</td>
 					<td>100</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -141,7 +152,8 @@
 					<td>刘璋</td>
 					<td>高等数学</td>
 					<td>95</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -150,7 +162,8 @@
 					<td>刘封</td>
 					<td>大学物理入门</td>
 					<td>76</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -159,7 +172,8 @@
 					<td>孙坚</td>
 					<td>大学物理入门</td>
 					<td>70</td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
+					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a><a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;"
 					title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
