--- a/代码类/WEB管理端前端/教务管理端/www/grade_class.html
+++ b/代码类/WEB管理端前端/教务管理端/www/grade_class.html
@@ -17,7 +17,8 @@
 </head>
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 班级管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
-
+<button class="btn btn-primary radius" type="submit">
+	<a style="color:#ffffff;" href="pmanager-ad.html">添加班级</a></button>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort">
 			<thead>
@@ -41,6 +42,7 @@
 					<td>物理A班</td>
 					<td>物理系专业的优秀班级</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -55,6 +57,7 @@
 					<td>物理B班</td>
 					<td>物理系专业的良好氛围班级</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -69,6 +72,7 @@
 					<td>物理C班</td>
 					<td>物理系专业的优秀班级</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -83,6 +87,7 @@
 					<td>物理D班</td>
 					<td></td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -97,6 +102,7 @@
 					<td>物理E班</td>
 					<td>物理系专业的优秀班级</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -111,6 +117,7 @@
 					<td>物理F班</td>
 					<td></td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -125,6 +132,7 @@
 					<td>物理G班</td>
 					<td>物理系专业的优秀班级</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -139,6 +147,7 @@
 					<td>物理H班</td>
 					<td>物理系专业的优秀班级</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -153,6 +162,7 @@
 					<td>物理I班</td>
 					<td>物理系专业的优秀班级</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -167,6 +177,7 @@
 					<td>会计A班</td>
 					<td>会计专业的优秀班级</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -181,6 +192,7 @@
 					<td>软工A班</td>
 					<td>计算机专业的优秀班级</td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
