--- a/代码类/WEB管理端前端/教务管理端/www/student-list.html
+++ b/代码类/WEB管理端前端/教务管理端/www/student-list.html
@@ -17,7 +17,8 @@
 </head>
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 学生管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
-
+<button class="btn btn-primary radius" type="submit">
+	<a style="color:#ffffff;" href="pmanager-ad.html">添加学生</a></button>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort">
 			<thead>
@@ -27,8 +28,7 @@
 					<th width="80">学生学号</th>
 					<th width="80">所属院校</th>
 					<th width="80">所在系</th>
-					<th width="80">所在班级</th>
-					<th width="80">登录密码</th>
+					<th width="80">所在班级</th> 
 					<th width="80">绑定用户</th>
 					<th width="80">操作</th>
 				</tr>
@@ -41,10 +41,10 @@
 					<td>15000001</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>e10adc3949ba59abbe56e057f20f883e</td>
+					<td>物理A班</td> 
 					<th>15000001</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -57,10 +57,10 @@
 					<td>15000002</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>bf9f8d1f05dc08cc3b02e8fcf2c2ba57</td>
+					<td>物理A班</td> 
 					<th>15000002</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -73,10 +73,10 @@
 					<td>15000003</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>733d7be2196ff70efaf6913fc8bdcabf</td>
+					<td>物理A班</td> 
 					<th>15000003</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -89,10 +89,10 @@
 					<td>15000004</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>71b3b26aaa319e0cdf6fdb8429c112b0</td>
+					<td>物理A班</td> 
 					<th>15000004</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -105,10 +105,10 @@
 					<td>15000005</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>6c44e5cd17f0019c64b042e4a745412a</td>
+					<td>物理A班</td> 
 					<th>15000005</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -121,10 +121,10 @@
 					<td>15000006</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>e10adc3949ba59abbe56e057f20f883e</td>
+					<td>物理A班</td> 
 					<th>15000006</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -137,10 +137,10 @@
 					<td>15000007</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>fb62579e990da4e2a8f15c3d1e123438</td>
+					<td>物理A班</td> 
 					<th>15000007</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -153,10 +153,10 @@
 					<td>15000008</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>a384b6463fc216a5f8ecb6670f86456a</td>
+					<td>物理A班</td> 
 					<th>15000008</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -170,10 +170,10 @@
 					<td>15000009</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>e120ea280aa50693d5568d0071456460</td>
+					<td>物理A班</td> 
 					<th>15000009</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -186,10 +186,10 @@
 					<td>15000010</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>b54b0cedbf6ac071636da3d095363049</td>
+					<td>物理A班</td> 
 					<th>15000010</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -202,10 +202,10 @@
 					<td>15000011</td>
 					<td>大学</td>
 					<td>物理</td>
-					<td>物理A班</td>
-					<td>fb62579e990da4e2a8f15c3d1e123438</td>
+					<td>物理A班</td> 
 					<th>15000011</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -219,9 +219,9 @@
 					<td>大学</td>
 					<td>物理</td>
 					<td>物理A班</td>
-					<td>6c44e5cd17f0019c64b042e4a745412a</td>
 					<th>15000012</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -238,6 +238,7 @@
 					<td>123456</td>
 					<th>15000000</th>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
