--- a/代码类/WEB管理端前端/教务管理端/www/ability.html
+++ b/代码类/WEB管理端前端/教务管理端/www/ability.html
@@ -32,10 +32,103 @@
 <title>查看信息</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 学生管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
-
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 数据分析 <span class="c-gray en">&gt;</span> 能力分析 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<button class="btn btn-primary radius" type="submit">
+	<a style="color:#ffffff;" href="pmanager-ad.html">发布公告</a></button>
 	<div class="mt-20">
-		<img src="img/nlda.png">
+		<table class="table table-border table-bordered table-bg table-hover table-sort">
+			<thead>
+				<tr class="text-c">
+					<th width="25"><input type="checkbox" name="" value=""></th>
+					<th width="80">学生学号</th>
+					<th width="80">学生姓名</th>
+					<th width="80">院系</th>
+					<th width="80">班级</th>
+					<th width="80">能力图</th>
+					<th width="80">操作</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>10001001</td>
+					<td>张三</td>
+					<td>大学物理</td>
+					<td>物理A班</td>
+					<td><img width="150" src="img/nlt.png"></td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>10001002</td>
+					<td>李四</td>
+					<td>大学物理</td>
+					<td>物理A班</td>
+					<td> <img width="150" src="img/nlt.png"></td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>10001003</td>
+					<td>吴五</td>
+					<td>大学物理</td>
+					<td>物理A班</td>
+					<td> <img width="150" src="img/nlt.png"> </td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>10001004</td>
+					<td>吴舞</td>
+					<td>高等数学</td>
+					<td>物理A班</td>
+					<td><img width="150" src="img/nlt.png"></td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>10001006</td>
+					<td>刘六</td>
+					<td>高等数学</td>
+					<td>物理A班</td>
+					<td><img width="150" src="img/nlt.png"></td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>10001008</td>
+					<td>巴九</td>
+					<td>工程数学</td>
+					<td>物理A班</td>
+					<td> <img width="150" src="img/nlt.png"> </td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 </div>
 
