--- a/代码类/WEB管理端前端/教务管理端/www/live_room.html
+++ b/代码类/WEB管理端前端/教务管理端/www/live_room.html
@@ -19,7 +19,8 @@
 </head>
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 学生管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
-
+<button class="btn btn-primary radius" type="submit">
+	<a style="color:#ffffff;" href="pmanager-ad.html">添加直播间</a></button>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort">
 			<thead>
@@ -42,6 +43,7 @@
 					<td>进行中</td>
 					<td><img src="img/logo2.png"></td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -55,6 +57,7 @@
 					<td>进行中</td>
 					<td><img src="img/logo2.png"></td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
@@ -68,116 +71,13 @@
 					<td>进行中</td>
 					<td><img src="img/logo2.png"></td>
 					<td class="f-14 td-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
 						title="删除">
 					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10325004</td>
-					<td>李敏</td>
-					<td>大学英语2</td>
-					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
-					<td class="f-14 td-manage">
-					<a style="text-decoration:none" class="ml-5" 
-						onClick="article_del(this,'10001')" href="javascript:;"
-						title="删除">
-					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10325005</td>
-					<td>苏六</td>
-					<td>C语言程序设计</td>
-					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
-					<td class="f-14 td-manage">
-					<a style="text-decoration:none" class="ml-5" 
-						onClick="article_del(this,'10001')" href="javascript:;"
-						title="删除">
-					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10325006</td>
-					<td>苏六</td>
-					<td>C++程序设计</td>
-					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
-					<td class="f-14 td-manage">
-					<a style="text-decoration:none" class="ml-5" 
-						onClick="article_del(this,'10001')" href="javascript:;"
-						title="删除">
-					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10325007</td>
-					<td>苏六</td>
-					<td>H5的移动开发</td>
-					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
-					<td class="f-14 td-manage">
-					<a style="text-decoration:none" class="ml-5" 
-						onClick="article_del(this,'10001')" href="javascript:;"
-						title="删除">
-					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10325008</td>
-					<td>苏六</td>
-					<td>数据库基础</td>
-					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
-					<td class="f-14 td-manage">
-					<a style="text-decoration:none" class="ml-5" 
-						onClick="article_del(this,'10001')" href="javascript:;"
-						title="删除">
-					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10325009</td>
-					<td>苏六</td>
-					<td>编译原理</td>
-					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
-					<td class="f-14 td-manage">
-					<a style="text-decoration:none" class="ml-5" 
-						onClick="article_del(this,'10001')" href="javascript:;"
-						title="删除">
-					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10325010</td>
-					<td>张三</td>
-					<td>离散数学</td>
-					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
-					<td class="f-14 td-manage">
-					<a style="text-decoration:none" class="ml-5" 
-						onClick="article_del(this,'10001')" href="javascript:;"
-						title="删除">
-					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10325011</td>
-					<td>张三</td>
-					<td>工程数学</td>
-					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
-					<td class="f-14 td-manage">
-					<a style="text-decoration:none" class="ml-5" 
-						onClick="article_del(this,'10001')" href="javascript:;"
-						title="删除">
-					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
+				
 			</tbody>
 		</table>
 	</div>
