--- a/代码类/WEB管理端前端/教务管理端/www/participation.html
+++ b/代码类/WEB管理端前端/教务管理端/www/participation.html
@@ -32,10 +32,142 @@
 <title>查看信息</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 学生管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
-
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 数据分析 <span class="c-gray en">&gt;</span> 参与度分析 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<button class="btn btn-primary radius" type="submit">
+	<a style="color:#ffffff;" href="pmanager-ad.html">发布公告</a></button>
 	<div class="mt-20">
-		<img src="img/cyd.png">
+		<table id="mytable" class="table table-border table-bordered table-bg table-hover table-sort">
+			<thead>
+				<tr class="text-c">
+					<th width="25"><input type="checkbox" name="" value=""></th>
+					<th width="80">课程名称</th>
+					<th width="80">课程封面</th>
+					<th width="80">参与人数</th>
+					<th width="80">容量人数</th>
+					<th width="80">参与比例</th>
+					<th width="80">操作</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>大学物理</td>
+					<td><img src="img/logo2.png"></td>
+					<td>50</td>
+					<td>50</td>
+					<td>100%</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>计算机网络</td>
+					<td><img src="img/logo2.png"></td>
+					<td>50</td>
+					<td>不限</td>
+					<td> </td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>软件工程</td>
+					<td><img src="img/logo2.png"></td>
+					<td>50</td>
+					<td>不限</td>
+					<td> </td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>PHP入门</td>
+					<td><img src="img/logo2.png"></td>
+					<td>45</td>
+					<td>50</td>
+					<td>90%</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>C语言程序设计</td>
+					<td><img src="img/logo2.png"></td>
+					<td>50</td>
+					<td>50</td>
+					<td>100%</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>编译原理</td>
+					<td><img src="img/logo2.png"></td>
+					<td>50</td>
+					<td>不限</td>
+					<td> </td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>操作系统</td>
+					<td><img src="img/logo2.png"></td>
+					<td>50</td>
+					<td>不限</td>
+					<td></td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>高等数学</td>
+					<td><img src="img/logo2.png"></td>
+					<td>40</td>
+					<td>50</td>
+					<td>80%</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="" value=""></td>
+					<td>工程数学</td>
+					<td><img src="img/logo2.png"></td>
+					<td>50</td>
+					<td>50</td>
+					<td>100%</td>
+					<td class="f-14 td-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" 
+						onClick="article_del(this,'10001')" href="javascript:;"
+						title="删除">
+					<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 </div>
 
