--- a/代码类/WEB管理端前端/运营管理平台/www/organization-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/organization-list.html
@@ -49,7 +49,9 @@
 					<td>杭州</td>
 					<td>浙江</td>
 					<td>培训机构</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -63,7 +65,9 @@
 					<td>台州</td>
 					<td>浙江</td>
 					<td>培训机构</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -76,7 +80,9 @@
 					<td>杭州</td>
 					<td>浙江</td>
 					<td>培训机构</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -89,7 +95,9 @@
 					<td>湖州</td>
 					<td>浙江</td>
 					<td>培训机构</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -102,7 +110,9 @@
 					<td>青岛</td>
 					<td>山东</td>
 					<td>培训机构</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 			</tbody>
 		</table>
