--- a/代码类/WEB管理端前端/运营管理平台/www/pinfor_list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/pinfor_list.html
@@ -35,7 +35,8 @@
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 门户管理 <span class="c-gray en">&gt;</span> 资讯管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
-	
+	<button class="btn btn-primary radius" type="submit">
+	<a style="color:#ffffff;" href="pmanager-ad.html">添加管理员</a></button>
 	<div class="mt-20">
 		<table id="mytable" class="table table-border table-bordered table-bg table-sort">
 			<thead>
@@ -55,7 +56,9 @@
 					<td>【中关村在线新闻资讯】3月23日消息， 近日有知情人士向彭博社透露，美团点评计划今年赴香港上市，并且已经就首次公开招股(IPO)展开磋商。在上市之前，美团点评还将进行融资，预计市值将会达到600亿美元。</td>
 					<td>吴晓宇</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -63,7 +66,9 @@
 					<td>【科技讯】4月10日消息，去年的HTC U11+得益于流畅的系统体验、出色的拍照能力和别具一格的Edge Sense交互方式，让许多人对这部手机赞赏有加，今年HTC继续发力，正计划发布HTC U12+，不过在这款手机正式发布之前，它的配置及售价信息就被曝光了出来。</td>
 					<td>科技讯</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -71,7 +76,9 @@
 					<td>【科技讯】4月11日消息，继金立工业园裁员调整之后，金立总部也开始了裁员，裁员比例为50%。该裁员名单早在清明节前就已经统计，4月10日深圳总部、北研所等均开始约谈员工，并出台了补偿方案。</td>
 					<td> 科技讯</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -79,7 +86,9 @@
 					<td>【科技讯】4月10日消息，国家广播电视总局在督察“今日头条”网站整改工作中，发现该公司组织推送的“内涵段子”客户端软件和相关公众号存在导向不正、格调低俗等突出问题，引发网民强烈反感。</td>
 					<td>国家广播电视总局微信公众号</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -87,7 +96,9 @@
 					<td>【科技讯】4月10日消息，日前一滴滴司机竟然因为临时加价被乘客拒绝，将乘客下在了高速路上，滴滴平台在事后查清原委外，对司机进行了封号处理。</td>
 					<td>科技讯</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -95,7 +106,9 @@
 					<td>【科技讯】4月10日消息，虎牙周一向美国证券交易委员会提交了IPO上市申请文件。招股书显示，虎牙计划通过IPO交易筹集最多2亿美元资金，该公司申请将其美国存托股票在纽约证券交易所挂牌上市，交易代码为“HUYA”。</td>
 					<td>科技讯</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -103,7 +116,9 @@
 					<td>【科技讯】4月10日消息，网易云音乐与杰威尔的版权风波尚未平息，网易云音乐电台也涉及版权风险。不少电台主播将电影、电视剧等转成音频文件上传至平台，但是否经过版权方授权则存在疑问。</td>
 					<td>吴晓宇</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -111,7 +126,9 @@
 					<td>【科技讯】4月10日消息，三星虽然推出了新品S9但在中国市场的表现还是有些不尽如人意。据国外市场调查公司StrategyAnalytics的调查显示，在2017年第四季度（10~12月），三星手机在中国市场的销售量仅为980万台</td>
 					<td>科技讯</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -120,7 +137,9 @@
                     记者从东方重机获悉，在核电站核岛主设备中，蒸汽发生器个头最高、体积最大、造价最高，被形象地称为“核电之肺”。“华龙一号”ZH-65型蒸汽发生器是中国核动力研究设计院张富源研发团队，采用国际第三代核电站蒸汽发生器的先进设计理念，连续攻克了ZH-65型蒸汽发生器的结构设计、性能验证、设计软件、关键材料国产化等一道道技术难关，做出多项重大技术改进、形成了具有完全自主知识产权的核电重大关键设备。</td>
 					<td>中新网</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -128,7 +147,9 @@
 					<td>【科技讯】4月10日消息，昨天下午，锤子科技发布了一款千元级别新机坚果3，与昨天的是一场发布会，不如说是一场“发布会的预热会”，因为首先昨天发布会的主角坚果3并不是大家期待的锤子真旗舰，大家都知道5月15日鸟巢的发布会才是旗舰亮相的舞台。其次老罗在昨天发布会也多次提到所有的重磅都将在5月15日出现，其中包括久违的旗舰机——锤子T3。</td>
 					<td>科技讯</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -136,7 +157,9 @@
 					<td>【科技讯】4月9日消息，此前传闻中的“手机摄影新品种”在业界引起了剧烈反响，今天这个能够引发手机摄影革命的机型正式由官方宣布了发布日期，它就是将于4月19日在上海发布的荣耀10。</td>
 					<td>科技讯</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -144,7 +167,9 @@
 					<td>【科技讯】4月10日消息，苹果有着每年为iPhone推出新配色的传统，本以在前段时间的春季发布会上苹果会亮相红色版的iPhone 8，没想到苹果让大家大失所望，不光没有红色iPhone 8，甚至大家期待的诸多产品都没有在发布会上亮相，被调侃为“最尴尬的一次苹果发布会”。</td>
 					<td>科技讯</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 			</tbody>
 		</table>
