--- a/代码类/WEB管理端前端/运营管理平台/www/platform_bill.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/platform_bill.html
@@ -55,7 +55,9 @@
 					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
 					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -63,7 +65,9 @@
 					<td><img width="210" src="temp/brand/ambio.jpg"></td>
 					<td>有机构需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -71,7 +75,9 @@
 					<td><img width="210" src="temp/brand/shengxiang.jpg"></td>
 					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -79,7 +85,9 @@
 					<td><img src="temp/brand/dongpeng.jpeg"></td>
 					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -87,7 +95,9 @@
 					<td><img src="temp/brand/dongpeng.jpeg"></td>
 					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
@@ -95,7 +105,9 @@
 					<td><img src="temp/brand/dongpeng.jpeg"></td>
 					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 			</tbody>
 		</table>
