--- a/代码类/WEB管理端前端/运营管理平台/www/pmanager-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/pmanager-list.html
@@ -21,7 +21,8 @@
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 院校管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
-	
+	<button class="btn btn-primary radius" type="submit">
+	<a style="color:#ffffff;" href="pmanager-ad.html">添加管理员</a></button>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-sort">
 			<thead>
@@ -29,7 +30,6 @@
 					<th width="25"><input type="checkbox" name="" value=""></th>
 					<th width="80">管理员名</th>
 					<th width="80">登录账号</th>
-					<th width="80">登录密码</th>
 					<th width="80">管理员权限</th>
 					<th width="80">操作</th>
 				</tr>
@@ -39,45 +39,51 @@
 					<td><input name="" type="checkbox" value=""></td>
 					<td>张三</td>
 					<td>10010101</td>
-					<td>e10adc3949ba59abbe56e057f20f883e</td>
 					<td>系统  财务</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
 					<td>李四</td>
 					<td>10010201</td>
-					<td>733d7be2196ff70efaf6913fc8bdcabf</td>
 					<td>财务</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
 					<td>administrator</td>
 					<td>10010102</td>
-					<td>e35cf7b66449df565f93c607d5a81d09</td>
 					<td>门户</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
 					<td>艾伦</td>
 					<td>10010202</td>
-					<td>6c44e5cd17f0019c64b042e4a745412a</td>
 					<td>财务 门户</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
 					<td>Marry</td>
 					<td>10010503</td>
-					<td>44d7231696044319858dc2c9a498f0da</td>
 					<td>财务</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 			</tbody>
 		</table>
+
 	</div>
 </div>
  
@@ -95,7 +101,7 @@ $('.table-sort').dataTable({
 	"bStateSave": true,//状态保存
 	"aoColumnDefs": [
 	  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-	  {"orderable":false,"aTargets":[0,5]}// 制定列不参与排序
+	  {"orderable":false,"aTargets":[0,3]}// 制定列不参与排序
 	]
 });
 </script>
