--- a/代码类/WEB管理端前端/运营管理平台/www/school_list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/school_list.html
@@ -35,7 +35,6 @@
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 院校管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
-	
 	<div class="mt-20">
 		<table id="mytable" class="table table-border table-bordered table-bg table-sort">
 			<thead>
@@ -63,40 +62,52 @@
 var schoolsite = [
         {"id":"10001","name":"大学A","icon":"temp/200x150.jpg",
          "introduce":"学校的历史十分的悠久，有着深厚的底蕴，是学生学习的圣地。",
-         "city":"杭州","province":"浙江","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"杭州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
         {"id":"10002","name":"大学B","icon":"temp/200x150.jpg",
          "introduce":"",
-         "city":"杭州","province":"浙江","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"杭州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
          {"id":"10003","name":"大学C","icon":"temp/200x150.jpg",
          "introduce":"学校的设备先进，教学质量优秀。",
-         "city":"台州","province":"浙江","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"台州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
          {"id":"10004","name":"大学D","icon":"temp/200x150.jpg",
          "introduce":"学校的师资量强悍，教学质量优秀。",
-         "city":"台州","province":"浙江","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"台州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
          {"id":"10005","name":"大学E","icon":"temp/200x150.jpg",
          "introduce":"学校的学习氛围十分严谨，是学生成长的优秀环境。",
-         "city":"湖州","province":"浙江","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"湖州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
          {"id":"10006","name":"大学F","icon":"temp/200x150.jpg",
          "introduce":" ",
-         "city":"嘉兴","province":"浙江","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"嘉兴","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
          {"id":"10007","name":"大学G","icon":"temp/200x150.jpg",
          "introduce":"学校的管理十分严格，对于学生的行为进行规范。",
-         "city":"陇西","province":"甘肃","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"陇西","province":"甘肃","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
          {"id":"10008","name":"大学H","icon":"temp/200x150.jpg",
          "introduce":"学校对于优秀的学生将给予丰厚的奖励。",
-         "city":"兰州","province":"甘肃","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"兰州","province":"甘肃","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
          {"id":"10009","name":"大学I","icon":"temp/200x150.jpg",
          "introduce":"学校每年都会为优秀的学生提供一定的科研资金。",
-         "city":"台州","province":"浙江","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"台州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
          {"id":"10010","name":"大学J","icon":"temp/200x150.jpg",
          "introduce":"",
-         "city":"福州","province":"福建","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"福州","province":"福建","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
          {"id":"10011","name":"大学K","icon":"temp/200x150.jpg",
          "introduce":"学校的设备先进，教学质量优秀。",
-         "city":"绍兴","province":"浙江","type":"高等学府","opt":"&#xe6e2;"},
+         "city":"绍兴","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"},
          {"id":"10012","name":"大学L","icon":"temp/200x150.jpg",
          "introduce":"学校的设备先进，教学质量优秀。",
-         "city":"丽水","province":"浙江","type":"高等学府","opt":"&#xe6e2;"}
+         "city":"丽水","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "opt1":"&#xe6df;"}
     ];
 
 var x="";
@@ -110,7 +121,7 @@ if(schoolsite[i]){
      "<td>"+schoolsite[i].city+"</td>"+
      "<td>"+schoolsite[i].province+"</td>"+
      "<td>"+schoolsite[i].type+"</td>"+
-     "<td><i class='"+"Hui-iconfont'>"+schoolsite[i].opt+"</i></td>"+
+     "<td><i class='"+"Hui-iconfont'>"+schoolsite[i].opt1+schoolsite[i].opt+"</i></td>"+
      "</tr>";
 }
 }
