管理端修改

--- a/代码类/WEB管理端前端/教务管理端/www/participation.html
+++ b/代码类/WEB管理端前端/教务管理端/www/participation.html
@@ -51,8 +51,8 @@
 			<tbody>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>大学物理</td>
-					<td><img src="img/logo2.png"></td>
+					<td>Linux 达人养成计划 II</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57035f580001a91806000338-240-135.jpg"></td>
 					<td>50</td>
 					<td>50</td>
 					<td>100%</td>
@@ -64,8 +64,8 @@
 				</tr>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>计算机网络</td>
-					<td><img src="img/logo2.png"></td>
+					<td>Linux达人养成计划 I</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57035f110001a57906000338-240-135.jpg"></td>
 					<td>50</td>
 					<td>不限</td>
 					<td> </td>
@@ -77,8 +77,8 @@
 				</tr>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>软件工程</td>
-					<td><img src="img/logo2.png"></td>
+					<td>Linux Guide for Developers</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=53fed63700018a9306000338-240-135.jpg"></td>
 					<td>50</td>
 					<td>不限</td>
 					<td> </td>
@@ -90,8 +90,8 @@
 				</tr>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>PHP入门</td>
-					<td><img src="img/logo2.png"></td>
+					<td>Linux中的计划任务之Crontab</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=544f0d9500017d6306000338-240-135.jpg"></td>
 					<td>45</td>
 					<td>50</td>
 					<td>90%</td>
@@ -103,8 +103,8 @@
 				</tr>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>C语言程序设计</td>
-					<td><img src="img/logo2.png"></td>
+					<td>云安全的架构设计与实践之旅</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5460558c0001f92506000338-240-135.jpg"></td>
 					<td>50</td>
 					<td>50</td>
 					<td>100%</td>
@@ -116,8 +116,8 @@
 				</tr>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>编译原理</td>
-					<td><img src="img/logo2.png"></td>
+					<td>Linux网络管理</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5704cf8c00012c9006000338-240-135.jpg"></td>
 					<td>50</td>
 					<td>不限</td>
 					<td> </td>
@@ -129,8 +129,8 @@
 				</tr>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>操作系统</td>
-					<td><img src="img/logo2.png"></td>
+					<td>在线分布式数据库原理与实践</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=570779200001fde006000338-240-135.jpg"></td>
 					<td>50</td>
 					<td>不限</td>
 					<td></td>
@@ -142,8 +142,8 @@
 				</tr>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>高等数学</td>
-					<td><img src="img/logo2.png"></td>
+					<td>云计算 - 引领阿里生态的技术发展之路</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=54b5e5af00010ec406000338-240-135.jpg"></td>
 					<td>40</td>
 					<td>50</td>
 					<td>80%</td>
@@ -155,8 +155,8 @@
 				</tr>
 				<tr>
 					<td><input type="checkbox" name="" value=""></td>
-					<td>工程数学</td>
-					<td><img src="img/logo2.png"></td>
+					<td>openstack最新技术解析</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=54b619d70001294906000338-240-135.jpg"></td>
 					<td>50</td>
 					<td>50</td>
 					<td>100%</td>
