--- a/代码类/WEB管理端前端/运营管理平台/www/school_list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/school_list.html
@@ -60,52 +60,44 @@
 <script>
 
 var schoolsite = [
-        {"id":"10001","name":"大学A","icon":"temp/200x150.jpg",
+        {"id":"10001","name":"杭州信息大学","icon":"http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png",
          "introduce":"学校的历史十分的悠久，有着深厚的底蕴，是学生学习的圣地。",
          "city":"杭州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
          "opt1":"&#xe6df;"},
-        {"id":"10002","name":"大学B","icon":"temp/200x150.jpg",
+        {"id":"10002","name":"衡州信息小学","icon":"http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg",
          "introduce":"",
-         "city":"杭州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "city":"嘉兴","province":"浙江","type":"小学","opt":"&#xe6e2;",
          "opt1":"&#xe6df;"},
-         {"id":"10003","name":"大学C","icon":"temp/200x150.jpg",
+         {"id":"10003","name":"台州测试学校","icon":"http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png",
          "introduce":"学校的设备先进，教学质量优秀。",
          "city":"台州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
          "opt1":"&#xe6df;"},
-         {"id":"10004","name":"大学D","icon":"temp/200x150.jpg",
+         {"id":"10004","name":"杭州信息小学","icon":"http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg",
          "introduce":"学校的师资量强悍，教学质量优秀。",
-         "city":"台州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "city":"杭州","province":"浙江","type":"小学","opt":"&#xe6e2;",
          "opt1":"&#xe6df;"},
-         {"id":"10005","name":"大学E","icon":"temp/200x150.jpg",
+         {"id":"10005","name":"温州信息小学","icon":"http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png",
          "introduce":"学校的学习氛围十分严谨，是学生成长的优秀环境。",
-         "city":"湖州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "city":"温州","province":"浙江","type":"小学","opt":"&#xe6e2;",
          "opt1":"&#xe6df;"},
-         {"id":"10006","name":"大学F","icon":"temp/200x150.jpg",
+         {"id":"10006","name":"衡州信息学院","icon":"http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg",
          "introduce":" ",
-         "city":"嘉兴","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
+         "city":"衡州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
          "opt1":"&#xe6df;"},
-         {"id":"10007","name":"大学G","icon":"temp/200x150.jpg",
+         {"id":"10007","name":"丽水信息小学","icon":"http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png",
          "introduce":"学校的管理十分严格，对于学生的行为进行规范。",
-         "city":"陇西","province":"甘肃","type":"高等学府","opt":"&#xe6e2;",
+         "city":"丽水","province":"浙江","type":"小学","opt":"&#xe6e2;",
          "opt1":"&#xe6df;"},
-         {"id":"10008","name":"大学H","icon":"temp/200x150.jpg",
+         {"id":"10008","name":"衡州信息学院","icon":"http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png",
          "introduce":"学校对于优秀的学生将给予丰厚的奖励。",
-         "city":"兰州","province":"甘肃","type":"高等学府","opt":"&#xe6e2;",
+         "city":"衡州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
          "opt1":"&#xe6df;"},
-         {"id":"10009","name":"大学I","icon":"temp/200x150.jpg",
+         {"id":"10009","name":"台州信息学院","icon":"http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png",
          "introduce":"学校每年都会为优秀的学生提供一定的科研资金。",
          "city":"台州","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
          "opt1":"&#xe6df;"},
-         {"id":"10010","name":"大学J","icon":"temp/200x150.jpg",
+         {"id":"10010","name":"丽水信息学院","icon":"http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg",
          "introduce":"",
-         "city":"福州","province":"福建","type":"高等学府","opt":"&#xe6e2;",
-         "opt1":"&#xe6df;"},
-         {"id":"10011","name":"大学K","icon":"temp/200x150.jpg",
-         "introduce":"学校的设备先进，教学质量优秀。",
-         "city":"绍兴","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
-         "opt1":"&#xe6df;"},
-         {"id":"10012","name":"大学L","icon":"temp/200x150.jpg",
-         "introduce":"学校的设备先进，教学质量优秀。",
          "city":"丽水","province":"浙江","type":"高等学府","opt":"&#xe6e2;",
          "opt1":"&#xe6df;"}
     ];
