--- a/代码类/WEB管理端前端/教务管理端/www/live_room.html
+++ b/代码类/WEB管理端前端/教务管理端/www/live_room.html
@@ -37,11 +37,11 @@
 			<tbody>
 				<tr class="text-c">
 					<td><input type="checkbox" value="" name=""></td>
-					<td>10325001</td>
-					<td>张三</td>
-					<td>大学物理的初步接触</td>
+					<td>9600f698</td>
+					<td>张小兰</td>
+					<td>生活中的数学</td>
 					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57eb9feb000106ec06000338-240-135.jpg"></td>
 					<td class="f-14 td-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
@@ -51,11 +51,11 @@
 				</tr>
 				<tr class="text-c">
 					<td><input type="checkbox" value="" name=""></td>
-					<td>10325002</td>
-					<td>张三</td>
-					<td>大学物理的深入了解</td>
+					<td>723203c2</td>
+					<td>章笑笑</td>
+					<td>趣味计算机</td>
 					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57a993e30001681106000338-240-135.jpg"></td>
 					<td class="f-14 td-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
@@ -65,11 +65,11 @@
 				</tr>
 				<tr class="text-c">
 					<td><input type="checkbox" value="" name=""></td>
-					<td>10325003</td>
-					<td>张三</td>
-					<td>高等数学</td>
+					<td>c4a3c846</td>
+					<td>廖家辉</td>
+					<td>廖老师的直播间</td>
 					<td>进行中</td>
-					<td><img src="img/logo2.png"></td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5800999f0001ac1106000338-240-135.jpg"></td>
 					<td class="f-14 td-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
 					<a style="text-decoration:none" class="ml-5" 
