--- a/代码类/WEB管理端前端/运营管理平台/www/entered.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/entered.html
@@ -33,7 +33,7 @@
 <title>品牌管理</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 入驻管理 <span class="c-gray en">&gt;</span> 申请列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 入驻管理 <span class="c-gray en">&gt;</span> 已入驻列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	
 	<div class="mt-20">
@@ -58,99 +58,99 @@
 			<tbody>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学B</td>
+					<td>杭州信息大学</td>
 					<td>高等院校</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
 					<td>学校的历史十分的悠久，有着深厚的底蕴，是学生学习的圣地。</td>
 					<td>杭州</td>
 					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td>苗名</td>
-					<td>330000000000500000</td>
-					<td>15100003000</td>
-					<td>15100002200@163.com</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
-					</a></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
+					<td>张三</td>
+					<td>330000000000000000</td>
+					<td>15100000000</td>
+					<td>15100000000@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>机构C</td>
-					<td>教育机构</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td>我们机构有着十分强大的师资力量。</td>
+					<td>衡州信息小学</td>
+					<td>小学</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg"></td>
+					<td>学校有着深厚的底蕴，是学生学习的圣地。</td>
+					<td>衡州</td>
+					<td>浙江</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg"></td>
+					<td>Marry</td>
+					<td>330000000000000001</td>
+					<td>15100000001</td>
+					<td>15100000001@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>台州测试学校</td>
+					<td>高等院校</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
+					<td>学校是学生学习的圣地。</td>
 					<td>杭州</td>
 					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td>Lili</td>
-					<td>330000000300000000</td>
-					<td>15100123000</td>
-					<td>151045000000@163.com</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
-					</a></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
+					<td>张四</td>
+					<td>330000000000000010</td>
+					<td>15100000010</td>
+					<td>15100001100@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>机构S</td>
-					<td>学习机构</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td></td>
-					<td>台州</td>
-					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td>东方六</td>
-					<td>330000000000000666</td>
-					<td>15100012345</td>
-					<td>15100034560@163.com</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
-					</a></td>
-				</tr>
-				<tr class="text-c">
-					<td><input name="" type="checkbox" value=""></td>
-					<td>大学Q</td>
-					<td>高等院校</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>杭州信息小学</td>
+					<td>小学</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57bab0140001bdb206000338-240-135.jpg"></td>
 					<td> </td>
 					<td>杭州</td>
 					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td>黄山</td>
-					<td>330000230000000000</td>
-					<td>15100005300</td>
-					<td>15100000000@163.com</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
-					</a></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57bab0140001bdb206000338-240-135.jpg"></td>
+					<td>张林</td>
+					<td>330000000000123400</td>
+					<td>15100032000</td>
+					<td>15100002100@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学G</td>
-					<td>高等院校</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td>学生学习的圣地，经常进行一些科研实验。</td>
-					<td>杭州</td>
+					<td>温州信息小学</td>
+					<td>小学</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5800999f0001ac1106000338-240-135.jpg"></td>
+					<td>学校的有着许多优秀的校友。</td>
+					<td>温州</td>
 					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td>宋壹</td>
-					<td>330000980000000000</td>
-					<td>15100005200</td>
-					<td>15100003000@163.com</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
-					</a></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5800999f0001ac1106000338-240-135.jpg"></td>
+					<td>Alan</td>
+					<td>330000000000000003</td>
+					<td>15100000040</td>
+					<td>15100000200@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学P</td>
+					<td>衡州信息学院</td>
 					<td>高等院校</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td></td>
-					<td>绍兴</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57de39800001bc6f06000338-240-135.jpg"></td>
+					<td> </td>
+					<td>衡州</td>
 					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td>北河</td>
-					<td>330000000000001100</td>
-					<td>15100011100</td>
-					<td>15100000100@163.com</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
-					</a></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57de39800001bc6f06000338-240-135.jpg"></td>
+					<td>刘六</td>
+					<td>330000000066000000</td>
+					<td>15100000660</td>
+					<td>15100000666@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 			</tbody>
 		</table>
