--- a/代码类/WEB管理端前端/运营管理平台/www/entering-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/entering-list.html
@@ -58,13 +58,13 @@
 			<tbody>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学</td>
+					<td>杭州信息大学</td>
 					<td>高等院校</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
 					<td>学校的历史十分的悠久，有着深厚的底蕴，是学生学习的圣地。</td>
 					<td>杭州</td>
 					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
 					<td>张三</td>
 					<td>330000000000000000</td>
 					<td>15100000000</td>
@@ -74,13 +74,13 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学A</td>
-					<td>高等院校</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>衡州信息小学</td>
+					<td>小学</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg"></td>
 					<td>学校有着深厚的底蕴，是学生学习的圣地。</td>
-					<td>台州</td>
+					<td>衡州</td>
 					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg"></td>
 					<td>Marry</td>
 					<td>330000000000000001</td>
 					<td>15100000001</td>
@@ -90,13 +90,13 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学2</td>
+					<td>台州测试学校</td>
 					<td>高等院校</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
 					<td>学校是学生学习的圣地。</td>
 					<td>杭州</td>
 					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
 					<td>张四</td>
 					<td>330000000000000010</td>
 					<td>15100000010</td>
@@ -106,14 +106,14 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学3</td>
-					<td>高等院校</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>杭州信息小学</td>
+					<td>小学</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57bab0140001bdb206000338-240-135.jpg"></td>
 					<td> </td>
-					<td>湖州</td>
+					<td>杭州</td>
 					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
-					<td>张三</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57bab0140001bdb206000338-240-135.jpg"></td>
+					<td>张林</td>
 					<td>330000000000123400</td>
 					<td>15100032000</td>
 					<td>15100002100@163.com</td>
@@ -122,13 +122,13 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学4</td>
-					<td>高等院校</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>温州信息小学</td>
+					<td>小学</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5800999f0001ac1106000338-240-135.jpg"></td>
 					<td>学校的有着许多优秀的校友。</td>
-					<td>杭州</td>
+					<td>温州</td>
 					<td>浙江</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5800999f0001ac1106000338-240-135.jpg"></td>
 					<td>Alan</td>
 					<td>330000000000000003</td>
 					<td>15100000040</td>
@@ -138,13 +138,13 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学6</td>
+					<td>衡州信息学院</td>
 					<td>高等院校</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57de39800001bc6f06000338-240-135.jpg"></td>
 					<td> </td>
-					<td>福州</td>
-					<td>福建</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>衡州</td>
+					<td>浙江</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57de39800001bc6f06000338-240-135.jpg"></td>
 					<td>刘六</td>
 					<td>330000000066000000</td>
 					<td>15100000660</td>
