--- a/代码类/WEB管理端前端/运营管理平台/www/organization-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/organization-list.html
@@ -40,13 +40,13 @@
 			<tbody >
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>50005</td>
-					<td>培训中心</td>
+					<td>ff7dd</td>
+					<td>丽水某机构</td>
 					<td>
-					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
+					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png">
 					</td>
 					<td>我们培训中心师资力量十分强大，可以帮助学生很好地提升自己的学习水平。</td>
-					<td>杭州</td>
+					<td>丽水</td>
 					<td>浙江</td>
 					<td>培训机构</td>
 					<td class="f-14 product-brand-manage">
@@ -55,13 +55,43 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>50007</td>
-					<td>B培训中心</td>
+					<td>c6a35</td>
+					<td>金华某机构</td>
 					<td>
-					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
+					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png">
 					</td>
 					<td>我们培训中心历年，都有着许多人气，培育出许多优秀的大学生。
 					</td>
+					<td>金华</td>
+					<td>浙江</td>
+					<td>培训机构</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>dec09</td>
+					<td>衡州某机构</td>
+					<td>
+					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg">
+					</td>
+					<td></td>
+					<td>衡州</td>
+					<td>浙江</td>
+					<td>培训机构</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>eefd7</td>
+					<td>台州某机构</td>
+					<td>
+					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png">
+					</td>
+					<td>本培训中心承诺，一定尽自己最大的努力帮助学生成长。</td>
 					<td>台州</td>
 					<td>浙江</td>
 					<td>培训机构</td>
@@ -71,44 +101,14 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>50010</td>
-					<td>培训中心D</td>
+					<td>6ec32</td>
+					<td>舟山某机构</td>
 					<td>
-					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
+					<img width="210" class="picture-thumb" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg">
 					</td>
 					<td></td>
-					<td>杭州</td>
+					<td>舟山</td>
 					<td>浙江</td>
-					<td>培训机构</td>
-					<td class="f-14 product-brand-manage">
-					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
-					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-				<tr class="text-c">
-					<td><input name="" type="checkbox" value=""></td>
-					<td>50001</td>
-					<td>培训中心</td>
-					<td>
-					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
-					</td>
-					<td>本培训中心承诺，一定尽自己最大的努力帮助学生成长。</td>
-					<td>湖州</td>
-					<td>浙江</td>
-					<td>培训机构</td>
-					<td class="f-14 product-brand-manage">
-					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
-					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-				<tr class="text-c">
-					<td><input name="" type="checkbox" value=""></td>
-					<td>50015</td>
-					<td>培训中心</td>
-					<td>
-					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
-					</td>
-					<td></td>
-					<td>青岛</td>
-					<td>山东</td>
 					<td>培训机构</td>
 					<td class="f-14 product-brand-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
