--- a/代码类/WEB管理端前端/运营管理平台/www/platform_bill.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/platform_bill.html
@@ -51,8 +51,8 @@
 			<tbody>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学A入驻</td>
-					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>杭州信息大学入驻</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
 					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
@@ -61,8 +61,8 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>机构5入驻</td>
-					<td><img width="210" src="temp/brand/ambio.jpg"></td>
+					<td>衡州信息小学入驻</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5a2e515200019a0306000338-240-135.jpg"></td>
 					<td>有机构需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
@@ -71,8 +71,8 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学H入驻</td>
-					<td><img width="210" src="temp/brand/shengxiang.jpg"></td>
+					<td>台州测试学校入驻</td>
+					<td><img width="210" src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
 					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
@@ -81,8 +81,8 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学M入驻</td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
+					<td>衡州信息学院入驻</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=57de39800001bc6f06000338-240-135.jpg"></td>
 					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
@@ -91,9 +91,9 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>机构3入驻</td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
-					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
+					<td>温州信息小学入驻</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=5800999f0001ac1106000338-240-135.jpg"></td>
+					<td>有小学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
 					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
@@ -101,8 +101,8 @@
 				</tr>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>机构9入驻</td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
+					<td>衡州信息学院</td>
+					<td><img src="http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile=0.png"></td>
 					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
 					<td class="f-14 product-brand-manage">
